# agentrscpp

./: .env_example  .gitignore  CMakeLists.txt  Makefile  README.md
examples/: mcp_integration.cpp  multi_agent.cpp  simple_agent.cpp  streaming.cpp  tool_use.cpp  yaml_multi_agent.cpp  yaml_runtime.cpp  yaml_single_agent.cpp
examples/configs/: multi-agent.yaml  runtime-agent.yaml  single-agent.yaml
include/agentrs/: agentrs.hpp  config.hpp  dotenv.hpp  result.hpp
include/agentrs/agents/: builder.hpp  runner.hpp
include/agentrs/llm/: anthropic.hpp  azureopenai.hpp  gemini.hpp  ollama.hpp  openai.hpp  registry.hpp
include/agentrs/mcp/: adapter.hpp  client.hpp  protocol.hpp
include/agentrs/memory/: in_memory.hpp  redis_backend.hpp  sliding_window.hpp  token_aware.hpp  vector.hpp
include/agentrs/multi/: communication.hpp  graph.hpp  orchestrator.hpp  shared_memory.hpp
include/agentrs/tools/: builtin.hpp  registry.hpp
src/: config.cpp
src/agents/: builder.cpp  runner.cpp
src/llm/: anthropic.cpp  azureopenai.cpp  gemini.cpp  ollama.cpp  openai.cpp  registry.cpp
src/mcp/: adapter.cpp  client.cpp  protocol.cpp
src/memory/: in_memory.cpp  redis_backend.cpp  sliding_window.cpp  token_aware.cpp  vector.cpp
src/multi/: communication.cpp  graph.cpp  orchestrator.cpp  shared_memory.cpp
src/tools/: builtin.cpp  registry.cpp
tests/: integration_test.cpp
